<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NetworkSearch"
    android:background="@color/colorSecondary">


    <TextView
        android:id="@+id/SearchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/recommended_recipe"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchedRecipeContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:maxHeight="400dp"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset"
        android:overScrollMode="always"
        android:hint="@string/no_content_search_recipe"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch"
        android:background="@drawable/searched_recipe_content_background"/>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/search_button_background"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="@+id/searchedRecipeContent"
        app:layout_constraintTop_toBottomOf="@+id/searchedRecipeTitle" />

    <TextView
        android:id="@+id/searchedRecipeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="30dp"
        android:textColor="#A52240"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SearchTitle"
        android:maxHeight="60dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>